--- a/index.html
+++ b/index.html
@@ -8,13 +8,66 @@
 
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.7.3/dist/full.min.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
+
+    <!-- font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@200..1000&display=swap" rel="stylesheet">
+
+
+    <style>
+        .font-mulish {
+            font-family: "Mulish", sans-serif;
+        }
+    </style>
+
+
+    <!-- font awesome -->
+    <script src="https://kit.fontawesome.com/297137adfb.js" crossorigin="anonymous"></script>
+
 </head>
 <body>
     <header>
         <!-- nav bar -->
-        <div>
-            
-        </div>
     </header>
+
+    <footer>
+        <div class="py-24 px-32 bg-gray-100 mb-4 w-full flex flex-col items-center font-mulish">
+            <div class="text-[#12132D] text-center font-black text-4xl leading-normal">
+                <h3>ReTro</h3>
+            </div>
+
+            <div class="text-[rgba(18, 19, 45, 0.70)] text-base font-normal text-center text w-[604px] leading-7 mb-8">
+                <p>
+                    Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a <br>piece of classical Latin literature from 45 BC
+                </p>
+            </div>
+
+            <div class="mb-12"> 
+                <div>
+                    <a href="https://twitter.com/maysha412" target="_blank">
+                        <i class="h-6 w-6 fa-brands fa-twitter"></i>
+                    </a>
+                    <a href="https://www.facebook.com/maysha.moon.94695459/" target="_blank">
+                        <i class="h-6 w-6 fa-brands fa-facebook"></i>
+                    </a>
+                    <a href="https://www.instagram.com/maysha_moon_/" target="_blank">
+                        <i class="h-6 w-6 fa-brands fa-instagram"></i>
+                    </a>
+                    <a href="https://github.com/Maysha-Khanom-Moon" target="_blank">
+                        <i class="h-6 w-6 fa-brands fa-github"></i>
+                    </a>
+                </div>
+
+            </div>
+
+            <hr class="h-[2px] text-[#30325E] w-full mb-12">
+            <div class="text-[rgba(18, 19, 45, 0.50)] font-light text-base">
+                <p>
+                    2017, All Rights Reserved.
+                </p>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
